2014-01-02      Gaius Mulley <gaius@gnu.org>

	* released GM2 1.1.0
	* gm2/gm2-libs/config-host:  rebuilt.
	* gm2/gm2-libs/config-host.in:  1.1.0.
	* gm2/gm2-libs/config-target:  rebuilt.
	* gm2/gm2-libs/config-target.in:  1.1.0.
	* gm2/gm2.texi:  updated release map.
	* gm2/gm2spec.c:  removed C++ comment.
	* gm2/version.c:  1.1.0.
	* gm2/examples/pge/Makefile.in:  interim checkin libpgeif uses
	  libtool during construction.  Temporary files removed from git.

2014-12-24      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge/pge.py:  interim checkin.
	* gm2/gm2-compiler/SymbolTable.mod:  corrected declaration of
	  PutDeclaredModule as reported by Christoph Schlegel.
	* gm2/gm2-libs-ch/sckt.c:  added conditional import of
	  stdio.h as reported by Christoph Schlegel.

2014-12-22      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge/run:  changed name of python script.
	* gm2/examples/swig/strlen/MyStrLib.i:  deleted.
	* gm2/tools-src/createUlmSys:  added SYSTEM_UNIXFORK and
	  SYSTEM_UNIXSIGNAL.

2014-12-09      Gaius Mulley <gaius@gnu.org>

	* gm2/config-lang.in:  added new gm2/examples/shared,
	  gm2/examples/full-strlib and gm2/examples/strio examples to the
	  list of Makefiles to be generated via configure.
	* gm2/examples/swig/exceptions/Makefile.in:  rewritten to use
	  libtool.
	* gm2/examples/swig/exceptions/stresstiny.py:  removed unnecessary
	  qualification.
	* gm2/examples/swig/exceptions/testtiny.py:  removed unnecessary
	  qualification.
	* gm2/examples/swig/exceptions/tiny.def:  renamed to libtiny.def.
	* gm2/examples/swig/exceptions/tiny.mod:  renamed to libtiny.mod.
	* gm2/examples/swig/strio/Makefile:  deleted.
	* gm2/examples/swig/strlib/Makefile.in:  rewritten to use libtool.
	* gm2/examples/swig/strlib/MyStrLib.def:  renamed as libStrLib.def.
	* gm2/examples/swig/strlib/MyStrLib.mod:  renamed as libStrLib.mod.
	* gm2/gm2.texi:  rewritten sections on building shared libraries