@@ -1,6 +1,6 @@
 #! /bin/sh
 # Guess values for system-dependent variables and create Makefiles.
-# Generated by GNU Autoconf 2.64 for ASCII.def 1.0.9.
+# Generated by GNU Autoconf 2.64 for ASCII.def 1.1.0.
 #
 # Report bugs to <gm2@nongnu.org>.
 #
@@ -549,8 +549,8 @@ MAKEFLAGS=
 # Identity of this package.
 PACKAGE_NAME='ASCII.def'
 PACKAGE_TARNAME='ascii-def'
-PACKAGE_VERSION='1.0.9'
-PACKAGE_STRING='ASCII.def 1.0.9'
+PACKAGE_VERSION='1.1.0'
+PACKAGE_STRING='ASCII.def 1.1.0'
 PACKAGE_BUGREPORT='gm2@nongnu.org'
 PACKAGE_URL=''
 
@@ -1195,7 +1195,7 @@ if test "$ac_init_help" = "long"; then
   # Omit some internal or obsolete options to make the list less imposing.
   # This message is too long to be a string in the A/UX 3.1 sh.
   cat <<_ACEOF
-\`configure' configures ASCII.def 1.0.9 to adapt to many kinds of systems.
+\`configure' configures ASCII.def 1.1.0 to adapt to many kinds of systems.
 
 Usage: $0 [OPTION]... [VAR=VALUE]...
 
@@ -1256,7 +1256,7 @@ fi
 
 if test -n "$ac_init_help"; then
   case $ac_init_help in
-     short | recursive ) echo "Configuration of ASCII.def 1.0.9:";;
+     short | recursive ) echo "Configuration of ASCII.def 1.1.0:";;
    esac
   cat <<\_ACEOF
 
@@ -1336,7 +1336,7 @@ fi
 test -n "$ac_init_help" && exit $ac_status
 if $ac_init_version; then
   cat <<\_ACEOF
-ASCII.def configure 1.0.9
+ASCII.def configure 1.1.0
 generated by GNU Autoconf 2.64
 
 Copyright (C) 2009 Free Software Foundation, Inc.
@@ -1885,7 +1885,7 @@ cat >config.log <<_ACEOF
 This file contains any messages produced by compilers while
 running configure, to aid debugging if configure makes a mistake.
 
-It was created by ASCII.def $as_me 1.0.9, which was
+It was created by ASCII.def $as_me 1.1.0, which was
 generated by GNU Autoconf 2.64.  Invocation command line was
 
   $ $0 $@
@@ -5048,7 +5048,7 @@ cat >>$CONFIG_STATUS <<\_ACEOF || ac_write_fail=1
 # report actual input values of CONFIG_FILES etc. instead of their
 # values after options handling.
 ac_log="
-This file was extended by ASCII.def $as_me 1.0.9, which was
+This file was extended by ASCII.def $as_me 1.1.0, which was
 generated by GNU Autoconf 2.64.  Invocation command line was
 
   CONFIG_FILES    = $CONFIG_FILES
@@ -5099,7 +5099,7 @@ Report bugs to <gm2@nongnu.org>."
 _ACEOF
 cat >>$CONFIG_STATUS <<_ACEOF || ac_write_fail=1
 ac_cs_version="\\
-ASCII.def config.status 1.0.9
+ASCII.def config.status 1.1.0
 configured by $0, generated by GNU Autoconf 2.64,
   with options \\"`$as_echo "$ac_configure_args" | sed 's/^ //; s/[\\""\`\$]/\\\\&/g'`\\"
 
